--- a/content/homepage/blank.html
+++ b/content/homepage/blank.html
@@ -7,26 +7,33 @@ widget:
   handler: blank
 
   # Options: sm, md, lg and xl. Default is md.
-  width:
+  width: sm
+  height: sm
 
   sidebar:
     # Options: left and right. Leave blank to hide.
-    position:
+    position: 
     # Options: sm, md, lg and xl. Default is md.
     scale:
   
   background:
     # Options: primary, secondary, tertiary or any valid color value. Default is primary.
     color:
-    image: images/hero-left.jpg
+    <!-- image: images/hacker.png -->
     # Options: auto, cover and contain. Default is auto.
     size: cover
     # Options: center, top, right, bottom, left.
-    position:
+    position: 
     # Options: fixed, local, scroll.
     attachment: 
 ---
+<!-- <div style="text-align:center; margin-top: 30px;">
+  <h1 style="font-family: Arial, sans-serif; font-size: 40px; font-weight: bold; color: #333;">My lovely dog: Hacker!</h1>
+  <h2 style="font-family: Arial, sans-serif; font-size: 24px; color: #666; margin-top: 10px; margin-bottom: 30px;">🤔 How to avoid reward hacking in dog training?</h2>
+  
+  <div style="margin-top: 20px;">
+    <img src="/assets/images/hacker.png" alt="My dog Hacker" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+  </div>
+</div> -->
 
-<div style="text-align:center">
-  <p>Try everything</p>
-</div>
+
